[gd_scene load_steps=6 format=3 uid="uid://bl53k36i6wlyr"]

[ext_resource type="Texture2D" uid="uid://dm50t65qdvas8" path="res://assets/ui/screen_puzzle_v2/folder_topbar_closed.png" id="1_5icxd"]
[ext_resource type="Texture2D" uid="uid://c0s3u02vvo4ui" path="res://assets/ui/screen_puzzle_v2/folder_topbar_open.png" id="2_hyojt"]
[ext_resource type="Script" path="res://src/screen_puzzles/ui/folder_button.gd" id="3_qo2h5"]
[ext_resource type="Texture2D" uid="uid://d3x0x0bthk0v0" path="res://assets/ui/screen_puzzle_v2/folder_topbar_closed_hover.png" id="4_hqx57"]
[ext_resource type="Texture2D" uid="uid://bslamw2r3oexr" path="res://assets/ui/screen_puzzle_v2/folder_topbar_open_active.png" id="5_6cjsg"]

[node name="FolderButton" type="TextureRect"]
z_index = 1
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_5icxd")
script = ExtResource("3_qo2h5")
closed_texture = ExtResource("1_5icxd")
open_texture = ExtResource("2_hyojt")

[node name="HoverGlow" type="Sprite2D" parent="."]
visible = false
z_index = -1
position = Vector2(47, 40)
texture = ExtResource("4_hqx57")

[node name="SelectedGlow" type="Sprite2D" parent="."]
visible = false
z_index = -1
position = Vector2(50, 38)
texture = ExtResource("5_6cjsg")
